# digitalocean-ddns-rs

./: .gitignore  Cargo.toml  config.example.toml
.github/workflows/: check.yml  cross_compile.yml  release.yml  rust.yml
src/: main.rs
