[package]
name = "edison-ddns-rs"
version = "0.1.0"
edition = "2021"
authors = ["Edison Jwa<me@edison.network>"]


[dependencies]
hickory-resolver = "0.24.1"
openssl-sys = "0.9.102"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
