[package]
name = "edison-ddns"
version = "0.3.0"
edition = "2021"
authors = ["Edison Jwa<me@edison.network>"]
description = "A simple DDNS client for dgon"
license = "AGPL-3.0-or-later"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hickory-resolver = "0.24.1"
openssl-sys = { version = "0.9.102", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
